--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-# These requirements are for running tests, the library itself only needs a
-# subset, see setup.py for that list
-coverage==4.4
-pudb==2017.1.2
-pyflakes==1.5.0
-six==1.10
-Sphinx==1.5.5
-sphinx-rtd-theme==0.2.4
-tox==2.7.0
-twine==1.8.1
-waelstow==0.10.0
+# These requirements are for running tests, the script only needs a subset, 
+# see setup.py for that list
+pudb==2019.1
+Pygments==2.4.2
+tox==3.14.0
+urwid==2.0.1
