--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,6 +19,6 @@ sphinx:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - requirements: requirements.txt
+    - requirements: requirements/docs.txt
     - method: pip
       path: .
