Fix bug where HighlightChain isn't turning off after the last step Changed supported versions to 3.8-3.12

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
-envlist = py{37,38,39,310,311}
+envlist = py{38,39,310,311,312}
 
 [testenv]
 commands=
     python setup.py test
+
+[testenv:py312]
+deps = setuptools==69.2.0
