--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [tox]
-envlist = py{38,39,310,311,312}
+envlist = py{39,310,311,312,313}
 
 [testenv]
 commands=
     python setup.py test
 
 [testenv:py312]
+deps = setuptools==69.2.0
+
+[testenv:py313]
 deps = setuptools==69.2.0
