Refactor the Formatter and Hook code as a single class (partly better design, partly to prep for how Textual does its weird escaping thing)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dev = [
 
 [project.scripts]
 subpurdy = "purdy.cmds.subpurdy:main"
+purdy = "purdy.cmds.purdy:main"
 
 [project.urls]
 repository = "https://github.com/cltrudeau/purdy"
