Add PyText to do source code manipulation before parsing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dynamic = ["version"]
 dependencies = [
     "argparse_formatter~=1.4",
+    "asttokens==3.0.0",
     "Pygments~=2.19.2",
     "textual~=6.1",
     "textual-transitions>=0.0.3",
